Sensor settings (#24)
* Some initial work. Added an new endpoint for getting the supported models from the server. Quick and dirty, added some code on the front end to try and grab it. Either way, need to update the backend to get this testable for the front end.

* This should be a good sized chonk of the sensor settings. I'm still gonna fiddle and iterate, but this feels like a good starting point for all that.

* Couple small changes. Units no longer appears in sensorNames. A common value is calculated higher up. Improved chart data regen.

* Some small final touches. Increased modal size, and increased button spacing on the edit modal.
